# danish-demography-analysis-1700-1900

./: .gitignore  pyproject.toml
scripts/: Average_Marriage_age_danish_women.ipynb  EDA_Census_V01.ipynb  EDA_Census_V02.ipynb  EDA_Census_v03.ipynb  EDA_LL_V01.ipynb  EDA_census_V04.ipynb  LL_Family_first_part_analysis.ipynb  LL_family_analysis.ipynb  LL_general_analysis.ipynb  LL_lifecycle_analysis.ipynb  LL_rate_never_marry.ipynb  LL_social_status_analysis.ipynb  _template_eda.py  analysis_compiled_1.ipynb  analysis_of_fertility_in_depth.ipynb  fertility-analysis.ipynb  helper_functions.py  households_summary_statistics.ipynb  ll_data_combiner.py  population_pyramid.py
